samples/_failures_safe/1761138219_5aed0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abb48acb.c: In function ‘main’:
./samples/SAFE/__tmp_abb48acb.c:153:5: error: expected expression at end of input
  153 |     if (a < 0 || b < 0 || c < 0 || d < 0 ||
      |     ^~
./samples/SAFE/__tmp_abb48acb.c:153:5: error: expected declaration or statement at end of input
